# fastapi-jwtauth

./: README.md  pyproject.toml
jwtauth/config/: __init__.py  settings.py
jwtauth/db/: database.py
jwtauth/models/: __init__.py  base.py  env_vars_model.py
jwtauth/schemas/: __init__.py  auth_schema.py
jwtauth/services/: __init__.py  jwt_services.py
jwtauth/utils/: __init__.py  helpers.py  jwtauth.py  utils.py
tests/: __init__.py  test_utils.py
